--- a/.github/workflows/arxiv_crawl.yml
+++ b/.github/workflows/arxiv_crawl.yml
@@ -22,11 +22,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 pytz arxiv openai dotenv
+
+      # Run the crawler script
       - name: Run crawler and update daily arxiv
         run: |
           python tools/main.py
         env:
           API_KEY: ${{ secrets.SILICONFLOW_API_KEY }}
+
+      # Commit and push changes if any
       - name: Commit changes
         run: |
           git config --local user.name "zhixin612"
@@ -35,3 +39,26 @@ jobs:
           git push
         env: 
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # ------------------------------------------------------
+      # Setup Node.js for frontend build
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      # Build the frontend
+      - name: Build Frontend
+        run: |
+          cd web
+          npm install
+          npm run build
+          cp ../tools/index.json dist/index.json
+
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./web/dist
+          force_orphan: true # Ensure a fresh history for gh-pages branch
