Update cron schedule
Signed-off-by: Zhixin Zhao <zhao612@tju.edu.cn>

--- a/.github/workflows/arxiv_crawl.yml
+++ b/.github/workflows/arxiv_crawl.yml
@@ -2,7 +2,10 @@ name: Arxiv Paper Crawler
 
 on:
   schedule:
-    - cron: '0 0 */1 * *'  # Runs at UTC 00:00, every day. --> UTC+8 08:00
+    # UTC 02:00 = UTC+8 8:00
+    - cron: '0 0 * * *'
+    # UTC 10:00 = UTC+8 18:00
+    - cron: '0 10 * * *'
   workflow_dispatch:
 
 permissions:
